redoing make files to batch compile all oscillator scripts in oscillators directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,27 @@
+# cmake_minimum_required(VERSION 3.10)
+# project(osc_project)
+
+# set(CMAKE_CXX_STANDARD 17)
+
+# # Add include directories
+# include_directories(/opt/homebrew/include)
+
+# # Add link directories
+# link_directories(/opt/homebrew/lib)
+
+# # Define the executable
+# add_executable(out osc.cpp)
+
+# # Link the sndfile library
+# target_link_libraries(out sndfile)
+
 cmake_minimum_required(VERSION 3.10)
-project(osc_project)
+project(osc_examples)
 
 set(CMAKE_CXX_STANDARD 17)
+
+# Define output directories
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Add include directories
 include_directories(/opt/homebrew/include)
@@ -9,8 +29,5 @@ include_directories(/opt/homebrew/include)
 # Add link directories
 link_directories(/opt/homebrew/lib)
 
-# Define the executable
-add_executable(out osc.cpp)
-
-# Link the sndfile library
-target_link_libraries(out sndfile)
+# Include the Oscillators directory
+add_subdirectory(Oscillators)
